# flux-screensavers

./: Dockerfile  LICENSE  flake.nix
windows/: Cargo.toml  build.rs
windows/src/: cli.rs  config.rs  gl_context.rs  main.rs  settings_window.rs  surface.rs  wallpaper.rs  winit_compat.rs
windows/src/config/: v1.rs
windows/src/platform/windows/: dxgi_swapchain.rs
