[package]
name = "flux-screensaver-windows"
version = "1.5.3"
description = "An open-source tribute to the macOS Drift screensaver"
authors = ["Sander Melnikov <hey@sandydoo.me"]
repository = "https://github.com/sandydoo/flux-screensavers/"
edition = "2021"
build = "build.rs"

[[bin]]
name = "Flux"
path = "src/main.rs"

[package.metadata.winres]
ProductName = "Flux"
FileDescription = "An open-source tribute to the macOS Drift screensaver"
LegalCopyright = "© 2023 Sander Melnikov"

[profile.release]
codegen-units = 1 # Allow further optimisations by disabling parallel compilation
lto = true # Enable link-time optimisation
opt-level = 3
panic = "abort" # Strip expensive panic unwinding code
strip = true # Remove debug symbols

[dependencies]
async-std = "1"
directories = "5"
glow = "0.12"
indoc = "2"
log = { version = "0.4", features = ["serde"] }
log-panics = { version = "2", features = ["with-backtrace"]}
ordered-float = "4.2.0"
raw-window-handle = "0.5"
semver = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simplelog = "^0.12.0"
tinyfiledialogs = { version = "3", default-features = false }
winit = "0.29"

[dependencies.sdl2]
version = "0.36"
default-features = false
features = [ "static-link", "raw-window-handle" ]

[target.'cfg(unix)'.dependencies.sdl2]
version = "0.36"
default-features = false
features = [ "use-pkgconfig" ]

[dependencies.glutin]
version = "0.31"

# >=v0.10 drops iced_glow
[dependencies.iced]
version = "0.9"
default-features = false
features = [
   # Use system fonts
  "default_system_font",

   # Use the OpenGL backend to reduce build size
  "glow"
]

[dependencies.flux]
version = "4"
git = "https://github.com/sandydoo/flux"
branch = "main"

[target.'cfg(windows)'.dependencies.windows]
version =  "^0.52.0"
features = [
  "Win32_Foundation",
  "Win32_Graphics_Direct3D",
  "Win32_Graphics_Direct3D11",
  "Win32_Graphics_Dwm",
  "Win32_Graphics_Dxgi",
  "Win32_Graphics_Dxgi_Common",
  "Win32_Graphics_Gdi",
  "Win32_Graphics_OpenGL",
  "Win32_System_Com",
  "Win32_System_LibraryLoader",
  "Win32_System_Threading",
  "Win32_UI_HiDpi",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging"
]

[build-dependencies]
cfg_aliases = "0.1.1"
winres = "0.1.12"

[patch.crates-io]
winres = { git = "https://github.com/sandydoo/winres", branch = "bugfix/fix-linking" }

# [patch."https://github.com/sandydoo/flux"]
# flux = { version = "4", path = "../../flux/flux" }
